// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/BillsAndPayment/BillsAndPaymentManagement/Main/elements/Dashboard/elements/PaymentHistorical/index render 1`] = `
<Box
  background="white"
  id="bill-and-payment-dashboard-sections-payment-history-root-id"
  mt="24px"
  padding="24px 32px"
  radius="8px"
  shadow="0px 6px 9px 0px rgba(46, 67, 77, 0.08)"
>
  <Box
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }
  >
    <Text
      color="secondary500"
      size="24px"
      weight="700"
    >
      Customer Payment Historical
    </Text>
  </Box>
  <Flex
    alignX="space-between"
    border="1px solid #E4E7E9"
    mt="16px"
    padding="16px"
    radius="8px"
  >
    <Flex
      direction="column"
    >
      <Text
        color="secondary500"
        size="16px"
        weight="700"
      >
        Formulation Payment Document
      </Text>
      <Text
        color="secondary300"
        size="14px"
      >
        No file uploaded. Upload xls, xlsx document, max 5 MB
      </Text>
    </Flex>
    <div>
      <label
        htmlFor="payDocument"
        id="bill-and-payment-dashboard-sections-payment-history-formula"
      >
        <Text
          color="primary500"
          size="14px"
          weight="700"
        >
          UPLOAD
        </Text>
      </label>
      <input
        accept=".xls, .xlsx, .csv"
        hidden={true}
        id="payDocument"
        onClick={[Function]}
        type="file"
      />
    </div>
  </Flex>
  <div>
    <div>
      <ThemeProvider
        theme={
          Object {
            "breakpoints": Object {
              "between": [Function],
              "down": [Function],
              "keys": Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ],
              "only": [Function],
              "up": [Function],
              "values": Object {
                "lg": 1280,
                "md": 960,
                "sm": 600,
                "xl": 1920,
                "xs": 0,
              },
              "width": [Function],
            },
            "color": Object {
              "black": "#000000",
              "blue": Object {
                "main": "#3071D9",
                "soft": "#CFE0FC",
              },
              "contrastText": "red",
              "general": Object {
                "dark": "#111E24",
                "general": "#3B525C",
                "light": "#B3C3CA",
                "main": "#3B525C",
                "mid": "#78858B",
                "soft": "#E4E7E9",
              },
              "green": Object {
                "dark": "#0E9255",
                "main": "#3BA064",
                "soft": "#ABEDC5",
              },
              "grey": Object {
                "main": "#9E9E9E",
                "soft": "#F5F5F5",
              },
              "orange": Object {
                "main": "#FD7E14",
                "soft": "#FFE8CC",
              },
              "primary": Object {
                "dark": "#900E0E",
                "light": "#FAB7B7",
                "main": "#DE1B1B",
                "mid": "#F55151",
                "soft": "#FAF0F0",
              },
              "purple": Object {
                "main": "#9657D6",
                "soft": "#EBDBFA",
              },
              "secondary": Object {
                "100": "#D2D8DA",
                "25": "#F8F9FA",
                "300": "#87959B",
                "400": "#61737C",
              },
              "success": Object {
                "50": "#E1F7EC",
                "500": "#12B76A",
              },
              "white": "#FFFFFF",
              "yellow": Object {
                "main": "#FAB005",
                "soft": "#FFF3BF",
              },
            },
            "direction": "ltr",
            "flex": Object {
              "alignItems": "center",
              "display": "flex",
            },
            "mixins": Object {
              "gutters": [Function],
              "toolbar": Object {
                "@media (min-width:0px) and (orientation: landscape)": Object {
                  "minHeight": 48,
                },
                "@media (min-width:600px)": Object {
                  "minHeight": 64,
                },
                "minHeight": 56,
              },
            },
            "overrides": Object {
              "MuiCssBaseline": Object {
                "@global": Object {
                  "body": Object {
                    "color": "#3B525C",
                    "paddingRight": "0px !important",
                  },
                },
              },
              "MuiDivider": Object {
                "root": Object {
                  "backgroundColor": "#B3C3CA",
                },
              },
              "MuiPaper": Object {
                "elevation8": Object {
                  "borderRadius": 8,
                  "boxShadow": "none",
                  "filter": "drop-shadow(0px 6px 9px rgba(46, 67, 77, 0.08))",
                  "overflow": "auto",
                },
              },
              "MuiPickersArrowSwitcher": Object {
                "iconButton": Object {
                  "&:hover": Object {
                    "color": "#111E24",
                  },
                  "backgroundColor": "#FFFFFF",
                  "color": "#3B525C",
                },
              },
              "MuiPickersBasePicker": Object {
                "pickerView": Object {
                  "padding": 0,
                  "width": 400,
                },
                "pickerViewLandscape": Object {
                  "padding": 0,
                },
              },
              "MuiPickersCalendar": Object {
                "calendarContainer": Object {
                  "minHeight": 240,
                },
                "daysHeader": Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottom": "1px solid #B3C3CA",
                  "color": "#3B525C",
                  "height": 24,
                  "justifyContent": "space-between",
                  "padding": 16,
                  "paddingBottom": 24,
                },
                "week": Object {
                  "justifyContent": "space-between",
                  "marginBottom": 12,
                  "marginTop": 8,
                  "padding": "0px 16px",
                },
                "weekDayLabel": Object {
                  "color": "#3B525C",
                  "fontWeight": 500,
                  "height": 24,
                  "width": 33,
                },
              },
              "MuiPickersCalendarHeader": Object {
                "switchHeader": Object {
                  "backgroundColor": "#FFFFFF",
                  "color": "#3B525C",
                  "marginBottom": 0,
                  "marginTop": 0,
                  "maxHeight": "none",
                  "minHeight": 56,
                  "paddingBottom": 8,
                  "paddingTop": 8,
                },
                "switchViewDropdown": Object {
                  "color": "#FFFFFF",
                },
              },
              "MuiPickersCalendarView": Object {
                "viewTransitionContainer": Object {},
              },
              "MuiPickersClock": Object {
                "clock": Object {
                  "marginTop": 20,
                },
                "container": Object {
                  "minHeight": 298,
                },
              },
              "MuiPickersClockView": Object {
                "arrowSwitcher": Object {
                  "minHeight": 200,
                },
              },
              "MuiPickersDateRangeDay": Object {
                "rangeIntervalDay": Object {
                  "&:first-child": Object {
                    "borderBottomLeftRadius": 4,
                    "borderTopLeftRadius": 4,
                  },
                  "&:last-child": Object {
                    "borderBottomRightRadius": 4,
                    "borderTopRightRadius": 4,
                  },
                },
                "rangeIntervalDayHighlight": Object {
                  "&:first-child": Object {
                    "borderBottomLeftRadius": 4,
                    "borderTopLeftRadius": 4,
                  },
                  "&:last-child": Object {
                    "borderBottomRightRadius": 4,
                    "borderTopRightRadius": 4,
                  },
                },
                "rangeIntervalDayHighlightEnd": Object {
                  "borderBottomRightRadius": 4,
                  "borderTopRightRadius": 4,
                },
                "rangeIntervalDayHighlightStart": Object {
                  "borderBottomLeftRadius": 4,
                  "borderTopLeftRadius": 4,
                },
                "rangeIntervalDayPreview": Object {
                  "borderRadius": "4px !important",
                },
              },
              "MuiPickersDay": Object {
                "day": Object {
                  "&:first-child": Object {
                    "color": "#DE1B1B",
                  },
                  "&:hover": Object {
                    "backgroundColor": "#FAF0F0",
                  },
                  "borderRadius": 4,
                  "color": "#3B525C",
                  "height": 26,
                  "width": 33,
                },
                "dayDisabled": Object {
                  "color": "#E4E7E9 !important",
                },
                "dayOutsideMonth": Object {
                  "color": "#78858B !important",
                },
                "daySelected": Object {
                  "color": "#FFFFFF !important",
                  "fontWeight": 400,
                },
              },
              "MuiPickersDesktopDateRangeCalendar": Object {
                "arrowSwitcher": Object {
                  "backgroundColor": "#DE1B1B",
                  "color": "#FFFFFF",
                },
                "calendar": Object {
                  "minHeight": 240,
                },
                "rangeCalendarContainer": Object {
                  "&:not(:last-child)": Object {
                    "borderRight": 0,
                  },
                },
              },
              "MuiPickersMonth": Object {
                "monthSelected": Object {
                  "&:hover": Object {
                    "backgroundColor": "#DE1B1B",
                    "color": "#FFFFFF !important",
                  },
                  "background": "#DE1B1B",
                  "color": "#FFFFFF !important",
                },
                "root": Object {
                  "&:hover": Object {
                    "backgroundColor": "#FAF0F0",
                    "color": "#3B525C",
                  },
                  "borderRadius": 4,
                  "fontSize": 14,
                  "fontWeight": 400,
                  "height": 38,
                  "letterSpacing": "0.0025em",
                  "marginBottom": 4,
                },
              },
              "MuiPickersMonthSelection": Object {
                "container": Object {
                  "padding": 16,
                  "width": 400,
                },
              },
              "MuiPickersStaticWrapper": Object {
                "staticWrapperRoot": Object {
                  "minWidth": 400,
                },
              },
              "MuiPickersYear": Object {
                "yearButton": Object {
                  "&:hover": Object {
                    "backgroundColor": "#FAF0F0",
                    "color": "#3B525C",
                  },
                  "borderRadius": 4,
                  "fontSize": 14,
                  "fontWeight": 400,
                  "height": "100%",
                  "letterSpacing": "0.0025em",
                  "width": "100%",
                },
                "yearButtonContainer": Object {
                  "height": 38,
                  "marginBottom": 4,
                  "padding": 0,
                  "width": 77,
                },
                "yearButtonContainerDesktop": Object {
                  "flexBasis": "33.3%",
                },
                "yearSelected": Object {
                  "&:hover": Object {
                    "backgroundColor": "#DE1B1B",
                    "color": "#FFFFFF",
                  },
                },
              },
              "MuiPickersYearSelection": Object {
                "container": Object {
                  "padding": 16,
                },
              },
              "MuiPopover": Object {
                "paper": Object {
                  "borderRadius": 8,
                  "boxShadow": "none",
                  "filter": "drop-shadow(0px 6px 9px rgba(46, 67, 77, 0.08))",
                },
              },
              "MuiTab": Object {
                "root": Object {
                  "minWidth": "0px !important",
                },
              },
              "MuiTypography": Object {
                "subtitle1": Object {
                  "fontFamily": "Titillium Web",
                  "fontSize": 16,
                  "fontWeight": 700,
                },
              },
            },
            "page": Object {
              "@keyframes load": Object {
                "to": Object {
                  "transform": "rotate(360deg)",
                },
              },
              "refreshIcon": Object {
                "fontSize": 16,
                "marginRight": 10,
              },
              "rotate": Object {
                "animation": "$load steps(100, end) 0.7s infinite",
              },
              "tableText": Object {
                "textOverflow": "ellipsis",
                "textTransform": "capitalize",
                "whiteSpace": "nowrap",
              },
            },
            "palette": Object {
              "action": Object {
                "activatedOpacity": 0.12,
                "active": "rgba(0, 0, 0, 0.54)",
                "disabled": "rgba(0, 0, 0, 0.26)",
                "disabledBackground": "rgba(0, 0, 0, 0.12)",
                "disabledOpacity": 0.38,
                "focus": "rgba(0, 0, 0, 0.12)",
                "focusOpacity": 0.12,
                "hover": "rgba(0, 0, 0, 0.04)",
                "hoverOpacity": 0.04,
                "selected": "rgba(0, 0, 0, 0.08)",
                "selectedOpacity": 0.08,
              },
              "augmentColor": [Function],
              "background": Object {
                "default": "#fafafa",
                "paper": "#fff",
              },
              "common": Object {
                "black": "#000",
                "white": "#fff",
              },
              "contrastThreshold": 3,
              "divider": "rgba(0, 0, 0, 0.12)",
              "error": Object {
                "contrastText": "#fff",
                "dark": "#d32f2f",
                "light": "#e57373",
                "main": "#f44336",
              },
              "getContrastText": [Function],
              "grey": Object {
                "100": "#f5f5f5",
                "200": "#eeeeee",
                "300": "#e0e0e0",
                "400": "#bdbdbd",
                "50": "#fafafa",
                "500": "#9e9e9e",
                "600": "#757575",
                "700": "#616161",
                "800": "#424242",
                "900": "#212121",
                "A100": "#d5d5d5",
                "A200": "#aaaaaa",
                "A400": "#303030",
                "A700": "#616161",
              },
              "info": Object {
                "contrastText": "#fff",
                "dark": "#1976d2",
                "light": "#64b5f6",
                "main": "#2196f3",
              },
              "primary": Object {
                "contrastText": "#fff",
                "dark": "rgb(155, 18, 18)",
                "light": "rgb(228, 72, 72)",
                "main": "#DE1B1B",
              },
              "secondary": Object {
                "contrastText": "#fff",
                "dark": "#c51162",
                "light": "#ff4081",
                "main": "#f50057",
              },
              "success": Object {
                "contrastText": "rgba(0, 0, 0, 0.87)",
                "dark": "#388e3c",
                "light": "#81c784",
                "main": "#4caf50",
              },
              "text": Object {
                "disabled": "rgba(0, 0, 0, 0.38)",
                "hint": "rgba(0, 0, 0, 0.38)",
                "primary": "rgba(0, 0, 0, 0.87)",
                "secondary": "rgba(0, 0, 0, 0.54)",
              },
              "tonalOffset": 0.2,
              "type": "light",
              "warning": Object {
                "contrastText": "rgba(0, 0, 0, 0.87)",
                "dark": "#f57c00",
                "light": "#ffb74d",
                "main": "#ff9800",
              },
            },
            "paper": Object {
              "boxShadow": "0px 6px 9px rgba(46, 67, 77, 0.08)",
            },
            "props": Object {},
            "shadows": Array [
              "none",
              "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
              "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
              "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
              "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
              "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
              "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
              "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
              "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
              "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
              "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
              "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
              "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
              "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
              "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
              "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
              "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
              "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
              "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
              "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
              "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
              "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
              "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
              "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
              "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
            ],
            "shape": Object {
              "borderRadius": 4,
            },
            "spacing": [Function],
            "transitions": Object {
              "create": [Function],
              "duration": Object {
                "complex": 375,
                "enteringScreen": 225,
                "leavingScreen": 195,
                "short": 250,
                "shorter": 200,
                "shortest": 150,
                "standard": 300,
              },
              "easing": Object {
                "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
              },
              "getAutoHeightDuration": [Function],
            },
            "typography": Object {
              "body1": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "1rem",
                "fontWeight": 400,
                "lineHeight": 1.5,
              },
              "body2": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "0.875rem",
                "fontWeight": 400,
                "lineHeight": 1.43,
              },
              "button": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "0.875rem",
                "fontWeight": 500,
                "lineHeight": 1.75,
                "textTransform": "uppercase",
              },
              "caption": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "0.75rem",
                "fontWeight": 400,
                "lineHeight": 1.66,
              },
              "color": "#3B525C",
              "fontFamily": "Titillium Web",
              "fontSize": 14,
              "fontWeightBold": 700,
              "fontWeightLight": 300,
              "fontWeightMedium": 500,
              "fontWeightRegular": 400,
              "h1": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "6rem",
                "fontWeight": 300,
                "lineHeight": 1.167,
              },
              "h2": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "3.75rem",
                "fontWeight": 300,
                "lineHeight": 1.2,
              },
              "h3": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "3rem",
                "fontWeight": 400,
                "lineHeight": 1.167,
              },
              "h4": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "2.125rem",
                "fontWeight": 400,
                "lineHeight": 1.235,
              },
              "h5": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "1.5rem",
                "fontWeight": 400,
                "lineHeight": 1.334,
              },
              "h6": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "1.25rem",
                "fontWeight": 500,
                "lineHeight": 1.6,
              },
              "htmlFontSize": 16,
              "overline": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "0.75rem",
                "fontWeight": 400,
                "lineHeight": 2.66,
                "textTransform": "uppercase",
              },
              "pxToRem": [Function],
              "round": [Function],
              "subtitle1": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "1rem",
                "fontWeight": 400,
                "lineHeight": 1.75,
              },
              "subtitle2": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "0.875rem",
                "fontWeight": 500,
                "lineHeight": 1.57,
              },
            },
            "zIndex": Object {
              "appBar": 1100,
              "drawer": 1200,
              "mobileStepper": 1000,
              "modal": 1300,
              "snackbar": 1400,
              "speedDial": 1050,
              "tooltip": 1500,
            },
          }
        }
      >
        <Unknown
          dateAdapter={[Function]}
          locale="en-US"
        >
          <div
            id="bill-and-payment-dashboard-sections-payment-history-calendar"
          >
            <ForwardRef
              autoOk={true}
              displayStaticWrapperAs="desktop"
              id="startPick"
              maxDate={2023-08-11T08:08:08.000Z}
              onChange={[MockFunction]}
              showDaysOutsideCurrentMonth={true}
              value="test"
              views={
                Array [
                  "date",
                ]
              }
            />
          </div>
        </Unknown>
      </ThemeProvider>
      <Box
        p={3}
      >
        <Box
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "gap": 24,
              "marginTop": "24px",
              "maxWidth": 400,
              "padding": "24px",
            }
          }
        >
          <Typography
            className=""
            color="general-mid"
            inline={false}
            variant="h5"
            weight="bold"
          >
            Upload Payment History - 
            Invalid date
          </Typography>
          <div>
            <Typography
              className=""
              color="general-mid"
              inline={false}
              variant="subtitle2"
              weight="normal"
            >
              Bank BNI
            </Typography>
            <FileUpload
              accept={
                Array [
                  ".csv",
                ]
              }
              customValidate={null}
              disabled={true}
              error={false}
              fetcher={null}
              helperText="Upload .csv document, max 5 MB"
              id="bill-and-payment-dashboard-sections-payment-history-upload-bni"
              label=""
              maxFile={1}
              maxSize={5242880}
              placeholder="Example: payment historical.csv"
              ratio={Array []}
              ratioPixel={Array []}
              required={false}
              value={
                Object {
                  "fileName": "test",
                  "fileUrl": "test",
                }
              }
              withCropper={false}
              withDelete={false}
            />
          </div>
          <div>
            <Typography
              className=""
              color="general-mid"
              inline={false}
              variant="subtitle2"
              weight="normal"
            >
              Bank Mandiri
            </Typography>
            <FileUpload
              accept={
                Array [
                  ".csv",
                ]
              }
              customValidate={null}
              disabled={true}
              error={false}
              fetcher={null}
              helperText="Upload .csv document, max 5 MB"
              id="bill-and-payment-dashboard-sections-payment-history-upload-mandiri"
              label=""
              maxFile={1}
              maxSize={5242880}
              placeholder="Example: payment historical.csv"
              ratio={Array []}
              ratioPixel={Array []}
              required={false}
              value={
                Object {
                  "fileName": "test",
                  "fileUrl": "test",
                }
              }
              withCropper={false}
              withDelete={false}
            />
          </div>
        </Box>
      </Box>
    </div>
    <Box
      style={
        Object {
          "flexGrow": 1,
          "overflow": "auto",
        }
      }
    >
      <TableDesktop
        customBody={null}
        customEmptyMessage={null}
        customItem={null}
        customStyles={
          Object {
            "pageInformation": Object {
              "borderBottomLeftRadius": 0,
              "borderBottomRightRadius": 8,
            },
            "root": Object {
              "borderBottomLeftRadius": 0,
              "borderBottomRightRadius": 8,
              "borderTopRightRadius": 8,
              "height": 640,
              "marginTop": -1,
              "martginRight": -1,
              "maxWidth": "100%",
            },
          }
        }
        data={Object {}}
        emptyMessage={
          Object {
            "description": "The data will appear when the customer payment history has been uploaded",
            "maxWidth": 320,
            "message": "There is no history",
            "size": "small",
          }
        }
        headerAlign="flex-start"
        loading={false}
        loadingRoot={false}
        maxHeight={640}
        meta={
          Object {
            "files": Object {
              "BNI": Object {
                "fileNameOrigin": "test",
                "fileUrl": "test",
              },
              "Mandiri": Object {
                "fileNameOrigin": "test",
                "fileUrl": "test",
              },
            },
          }
        }
        numbering={true}
        onBottomPage={[MockFunction]}
        onClickRow={null}
        onPaginationChange={null}
        page={1}
        pickedRow=""
        pickedRowKey=""
        schema={
          Array [
            Object {
              "label": "COMPANY NAME",
              "name": "companyName",
            },
            Object {
              "label": "BP NUMBER",
              "name": "bpNumber",
            },
            Object {
              "label": "PAYMENT",
              "name": "type",
            },
            Object {
              "label": "STATUS",
              "name": "status",
              "schemaStatus": Object {
                "failed": "danger",
                "sent": "success",
              },
            },
          ]
        }
        selectWithRawData={false}
        selectedRowKey="key"
        selectedRowSticky={false}
        size={10}
        useCollapseChild={null}
        useOrderBy={
          Array [
            null,
            [Function],
          ]
        }
        useOrderDirection={
          Array [
            null,
            [Function],
          ]
        }
        useSelectedRow={Array []}
      />
    </Box>
  </div>
  <PopUpListSubmittedCustomer
    onClose={[MockFunction]}
  />
</Box>
`;

exports[`src/containers/BillsAndPayment/BillsAndPaymentManagement/Main/elements/Dashboard/elements/PaymentHistorical/index render fileNameOrigin undefined 1`] = `
<Box
  background="white"
  id="bill-and-payment-dashboard-sections-payment-history-root-id"
  mt="24px"
  padding="24px 32px"
  radius="8px"
  shadow="0px 6px 9px 0px rgba(46, 67, 77, 0.08)"
>
  <Box
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }
  >
    <Text
      color="secondary500"
      size="24px"
      weight="700"
    >
      Customer Payment Historical
    </Text>
  </Box>
  <Flex
    alignX="space-between"
    border="1px solid #E4E7E9"
    mt="16px"
    padding="16px"
    radius="8px"
  >
    <Flex
      direction="column"
    >
      <Text
        color="secondary500"
        size="16px"
        weight="700"
      >
        Formulation Payment Document
      </Text>
      <Text
        color="secondary300"
        size="14px"
      >
        No file uploaded. Upload xls, xlsx document, max 5 MB
      </Text>
    </Flex>
    <div>
      <label
        htmlFor="payDocument"
        id="bill-and-payment-dashboard-sections-payment-history-formula"
      >
        <Text
          color="primary500"
          size="14px"
          weight="700"
        >
          UPLOAD
        </Text>
      </label>
      <input
        accept=".xls, .xlsx, .csv"
        hidden={true}
        id="payDocument"
        onClick={[Function]}
        type="file"
      />
    </div>
  </Flex>
  <div>
    <div>
      <ThemeProvider
        theme={
          Object {
            "breakpoints": Object {
              "between": [Function],
              "down": [Function],
              "keys": Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ],
              "only": [Function],
              "up": [Function],
              "values": Object {
                "lg": 1280,
                "md": 960,
                "sm": 600,
                "xl": 1920,
                "xs": 0,
              },
              "width": [Function],
            },
            "color": Object {
              "black": "#000000",
              "blue": Object {
                "main": "#3071D9",
                "soft": "#CFE0FC",
              },
              "contrastText": "red",
              "general": Object {
                "dark": "#111E24",
                "general": "#3B525C",
                "light": "#B3C3CA",
                "main": "#3B525C",
                "mid": "#78858B",
                "soft": "#E4E7E9",
              },
              "green": Object {
                "dark": "#0E9255",
                "main": "#3BA064",
                "soft": "#ABEDC5",
              },
              "grey": Object {
                "main": "#9E9E9E",
                "soft": "#F5F5F5",
              },
              "orange": Object {
                "main": "#FD7E14",
                "soft": "#FFE8CC",
              },
              "primary": Object {
                "dark": "#900E0E",
                "light": "#FAB7B7",
                "main": "#DE1B1B",
                "mid": "#F55151",
                "soft": "#FAF0F0",
              },
              "purple": Object {
                "main": "#9657D6",
                "soft": "#EBDBFA",
              },
              "secondary": Object {
                "100": "#D2D8DA",
                "25": "#F8F9FA",
                "300": "#87959B",
                "400": "#61737C",
              },
              "success": Object {
                "50": "#E1F7EC",
                "500": "#12B76A",
              },
              "white": "#FFFFFF",
              "yellow": Object {
                "main": "#FAB005",
                "soft": "#FFF3BF",
              },
            },
            "direction": "ltr",
            "flex": Object {
              "alignItems": "center",
              "display": "flex",
            },
            "mixins": Object {
              "gutters": [Function],
              "toolbar": Object {
                "@media (min-width:0px) and (orientation: landscape)": Object {
                  "minHeight": 48,
                },
                "@media (min-width:600px)": Object {
                  "minHeight": 64,
                },
                "minHeight": 56,
              },
            },
            "overrides": Object {
              "MuiCssBaseline": Object {
                "@global": Object {
                  "body": Object {
                    "color": "#3B525C",
                    "paddingRight": "0px !important",
                  },
                },
              },
              "MuiDivider": Object {
                "root": Object {
                  "backgroundColor": "#B3C3CA",
                },
              },
              "MuiPaper": Object {
                "elevation8": Object {
                  "borderRadius": 8,
                  "boxShadow": "none",
                  "filter": "drop-shadow(0px 6px 9px rgba(46, 67, 77, 0.08))",
                  "overflow": "auto",
                },
              },
              "MuiPickersArrowSwitcher": Object {
                "iconButton": Object {
                  "&:hover": Object {
                    "color": "#111E24",
                  },
                  "backgroundColor": "#FFFFFF",
                  "color": "#3B525C",
                },
              },
              "MuiPickersBasePicker": Object {
                "pickerView": Object {
                  "padding": 0,
                  "width": 400,
                },
                "pickerViewLandscape": Object {
                  "padding": 0,
                },
              },
              "MuiPickersCalendar": Object {
                "calendarContainer": Object {
                  "minHeight": 240,
                },
                "daysHeader": Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottom": "1px solid #B3C3CA",
                  "color": "#3B525C",
                  "height": 24,
                  "justifyContent": "space-between",
                  "padding": 16,
                  "paddingBottom": 24,
                },
                "week": Object {
                  "justifyContent": "space-between",
                  "marginBottom": 12,
                  "marginTop": 8,
                  "padding": "0px 16px",
                },
                "weekDayLabel": Object {
                  "color": "#3B525C",
                  "fontWeight": 500,
                  "height": 24,
                  "width": 33,
                },
              },
              "MuiPickersCalendarHeader": Object {
                "switchHeader": Object {
                  "backgroundColor": "#FFFFFF",
                  "color": "#3B525C",
                  "marginBottom": 0,
                  "marginTop": 0,
                  "maxHeight": "none",
                  "minHeight": 56,
                  "paddingBottom": 8,
                  "paddingTop": 8,
                },
                "switchViewDropdown": Object {
                  "color": "#FFFFFF",
                },
              },
              "MuiPickersCalendarView": Object {
                "viewTransitionContainer": Object {},
              },
              "MuiPickersClock": Object {
                "clock": Object {
                  "marginTop": 20,
                },
                "container": Object {
                  "minHeight": 298,
                },
              },
              "MuiPickersClockView": Object {
                "arrowSwitcher": Object {
                  "minHeight": 200,
                },
              },
              "MuiPickersDateRangeDay": Object {
                "rangeIntervalDay": Object {
                  "&:first-child": Object {
                    "borderBottomLeftRadius": 4,
                    "borderTopLeftRadius": 4,
                  },
                  "&:last-child": Object {
                    "borderBottomRightRadius": 4,
                    "borderTopRightRadius": 4,
                  },
                },
                "rangeIntervalDayHighlight": Object {
                  "&:first-child": Object {
                    "borderBottomLeftRadius": 4,
                    "borderTopLeftRadius": 4,
                  },
                  "&:last-child": Object {
                    "borderBottomRightRadius": 4,
                    "borderTopRightRadius": 4,
                  },
                },
                "rangeIntervalDayHighlightEnd": Object {
                  "borderBottomRightRadius": 4,
                  "borderTopRightRadius": 4,
                },
                "rangeIntervalDayHighlightStart": Object {
                  "borderBottomLeftRadius": 4,
                  "borderTopLeftRadius": 4,
                },
                "rangeIntervalDayPreview": Object {
                  "borderRadius": "4px !important",
                },
              },
              "MuiPickersDay": Object {
                "day": Object {
                  "&:first-child": Object {
                    "color": "#DE1B1B",
                  },
                  "&:hover": Object {
                    "backgroundColor": "#FAF0F0",
                  },
                  "borderRadius": 4,
                  "color": "#3B525C",
                  "height": 26,
                  "width": 33,
                },
                "dayDisabled": Object {
                  "color": "#E4E7E9 !important",
                },
                "dayOutsideMonth": Object {
                  "color": "#78858B !important",
                },
                "daySelected": Object {
                  "color": "#FFFFFF !important",
                  "fontWeight": 400,
                },
              },
              "MuiPickersDesktopDateRangeCalendar": Object {
                "arrowSwitcher": Object {
                  "backgroundColor": "#DE1B1B",
                  "color": "#FFFFFF",
                },
                "calendar": Object {
                  "minHeight": 240,
                },
                "rangeCalendarContainer": Object {
                  "&:not(:last-child)": Object {
                    "borderRight": 0,
                  },
                },
              },
              "MuiPickersMonth": Object {
                "monthSelected": Object {
                  "&:hover": Object {
                    "backgroundColor": "#DE1B1B",
                    "color": "#FFFFFF !important",
                  },
                  "background": "#DE1B1B",
                  "color": "#FFFFFF !important",
                },
                "root": Object {
                  "&:hover": Object {
                    "backgroundColor": "#FAF0F0",
                    "color": "#3B525C",
                  },
                  "borderRadius": 4,
                  "fontSize": 14,
                  "fontWeight": 400,
                  "height": 38,
                  "letterSpacing": "0.0025em",
                  "marginBottom": 4,
                },
              },
              "MuiPickersMonthSelection": Object {
                "container": Object {
                  "padding": 16,
                  "width": 400,
                },
              },
              "MuiPickersStaticWrapper": Object {
                "staticWrapperRoot": Object {
                  "minWidth": 400,
                },
              },
              "MuiPickersYear": Object {
                "yearButton": Object {
                  "&:hover": Object {
                    "backgroundColor": "#FAF0F0",
                    "color": "#3B525C",
                  },
                  "borderRadius": 4,
                  "fontSize": 14,
                  "fontWeight": 400,
                  "height": "100%",
                  "letterSpacing": "0.0025em",
                  "width": "100%",
                },
                "yearButtonContainer": Object {
                  "height": 38,
                  "marginBottom": 4,
                  "padding": 0,
                  "width": 77,
                },
                "yearButtonContainerDesktop": Object {
                  "flexBasis": "33.3%",
                },
                "yearSelected": Object {
                  "&:hover": Object {
                    "backgroundColor": "#DE1B1B",
                    "color": "#FFFFFF",
                  },
                },
              },
              "MuiPickersYearSelection": Object {
                "container": Object {
                  "padding": 16,
                },
              },
              "MuiPopover": Object {
                "paper": Object {
                  "borderRadius": 8,
                  "boxShadow": "none",
                  "filter": "drop-shadow(0px 6px 9px rgba(46, 67, 77, 0.08))",
                },
              },
              "MuiTab": Object {
                "root": Object {
                  "minWidth": "0px !important",
                },
              },
              "MuiTypography": Object {
                "subtitle1": Object {
                  "fontFamily": "Titillium Web",
                  "fontSize": 16,
                  "fontWeight": 700,
                },
              },
            },
            "page": Object {
              "@keyframes load": Object {
                "to": Object {
                  "transform": "rotate(360deg)",
                },
              },
              "refreshIcon": Object {
                "fontSize": 16,
                "marginRight": 10,
              },
              "rotate": Object {
                "animation": "$load steps(100, end) 0.7s infinite",
              },
              "tableText": Object {
                "textOverflow": "ellipsis",
                "textTransform": "capitalize",
                "whiteSpace": "nowrap",
              },
            },
            "palette": Object {
              "action": Object {
                "activatedOpacity": 0.12,
                "active": "rgba(0, 0, 0, 0.54)",
                "disabled": "rgba(0, 0, 0, 0.26)",
                "disabledBackground": "rgba(0, 0, 0, 0.12)",
                "disabledOpacity": 0.38,
                "focus": "rgba(0, 0, 0, 0.12)",
                "focusOpacity": 0.12,
                "hover": "rgba(0, 0, 0, 0.04)",
                "hoverOpacity": 0.04,
                "selected": "rgba(0, 0, 0, 0.08)",
                "selectedOpacity": 0.08,
              },
              "augmentColor": [Function],
              "background": Object {
                "default": "#fafafa",
                "paper": "#fff",
              },
              "common": Object {
                "black": "#000",
                "white": "#fff",
              },
              "contrastThreshold": 3,
              "divider": "rgba(0, 0, 0, 0.12)",
              "error": Object {
                "contrastText": "#fff",
                "dark": "#d32f2f",
                "light": "#e57373",
                "main": "#f44336",
              },
              "getContrastText": [Function],
              "grey": Object {
                "100": "#f5f5f5",
                "200": "#eeeeee",
                "300": "#e0e0e0",
                "400": "#bdbdbd",
                "50": "#fafafa",
                "500": "#9e9e9e",
                "600": "#757575",
                "700": "#616161",
                "800": "#424242",
                "900": "#212121",
                "A100": "#d5d5d5",
                "A200": "#aaaaaa",
                "A400": "#303030",
                "A700": "#616161",
              },
              "info": Object {
                "contrastText": "#fff",
                "dark": "#1976d2",
                "light": "#64b5f6",
                "main": "#2196f3",
              },
              "primary": Object {
                "contrastText": "#fff",
                "dark": "rgb(155, 18, 18)",
                "light": "rgb(228, 72, 72)",
                "main": "#DE1B1B",
              },
              "secondary": Object {
                "contrastText": "#fff",
                "dark": "#c51162",
                "light": "#ff4081",
                "main": "#f50057",
              },
              "success": Object {
                "contrastText": "rgba(0, 0, 0, 0.87)",
                "dark": "#388e3c",
                "light": "#81c784",
                "main": "#4caf50",
              },
              "text": Object {
                "disabled": "rgba(0, 0, 0, 0.38)",
                "hint": "rgba(0, 0, 0, 0.38)",
                "primary": "rgba(0, 0, 0, 0.87)",
                "secondary": "rgba(0, 0, 0, 0.54)",
              },
              "tonalOffset": 0.2,
              "type": "light",
              "warning": Object {
                "contrastText": "rgba(0, 0, 0, 0.87)",
                "dark": "#f57c00",
                "light": "#ffb74d",
                "main": "#ff9800",
              },
            },
            "paper": Object {
              "boxShadow": "0px 6px 9px rgba(46, 67, 77, 0.08)",
            },
            "props": Object {},
            "shadows": Array [
              "none",
              "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
              "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
              "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
              "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
              "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
              "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
              "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
              "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
              "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
              "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
              "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
              "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
              "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
              "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
              "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
              "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
              "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
              "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
              "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
              "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
              "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
              "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
              "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
              "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
            ],
            "shape": Object {
              "borderRadius": 4,
            },
            "spacing": [Function],
            "transitions": Object {
              "create": [Function],
              "duration": Object {
                "complex": 375,
                "enteringScreen": 225,
                "leavingScreen": 195,
                "short": 250,
                "shorter": 200,
                "shortest": 150,
                "standard": 300,
              },
              "easing": Object {
                "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
              },
              "getAutoHeightDuration": [Function],
            },
            "typography": Object {
              "body1": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "1rem",
                "fontWeight": 400,
                "lineHeight": 1.5,
              },
              "body2": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "0.875rem",
                "fontWeight": 400,
                "lineHeight": 1.43,
              },
              "button": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "0.875rem",
                "fontWeight": 500,
                "lineHeight": 1.75,
                "textTransform": "uppercase",
              },
              "caption": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "0.75rem",
                "fontWeight": 400,
                "lineHeight": 1.66,
              },
              "color": "#3B525C",
              "fontFamily": "Titillium Web",
              "fontSize": 14,
              "fontWeightBold": 700,
              "fontWeightLight": 300,
              "fontWeightMedium": 500,
              "fontWeightRegular": 400,
              "h1": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "6rem",
                "fontWeight": 300,
                "lineHeight": 1.167,
              },
              "h2": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "3.75rem",
                "fontWeight": 300,
                "lineHeight": 1.2,
              },
              "h3": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "3rem",
                "fontWeight": 400,
                "lineHeight": 1.167,
              },
              "h4": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "2.125rem",
                "fontWeight": 400,
                "lineHeight": 1.235,
              },
              "h5": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "1.5rem",
                "fontWeight": 400,
                "lineHeight": 1.334,
              },
              "h6": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "1.25rem",
                "fontWeight": 500,
                "lineHeight": 1.6,
              },
              "htmlFontSize": 16,
              "overline": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "0.75rem",
                "fontWeight": 400,
                "lineHeight": 2.66,
                "textTransform": "uppercase",
              },
              "pxToRem": [Function],
              "round": [Function],
              "subtitle1": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "1rem",
                "fontWeight": 400,
                "lineHeight": 1.75,
              },
              "subtitle2": Object {
                "fontFamily": "Titillium Web",
                "fontSize": "0.875rem",
                "fontWeight": 500,
                "lineHeight": 1.57,
              },
            },
            "zIndex": Object {
              "appBar": 1100,
              "drawer": 1200,
              "mobileStepper": 1000,
              "modal": 1300,
              "snackbar": 1400,
              "speedDial": 1050,
              "tooltip": 1500,
            },
          }
        }
      >
        <Unknown
          dateAdapter={[Function]}
          locale="en-US"
        >
          <div
            id="bill-and-payment-dashboard-sections-payment-history-calendar"
          >
            <ForwardRef
              autoOk={true}
              displayStaticWrapperAs="desktop"
              id="startPick"
              maxDate={2023-08-11T08:08:08.000Z}
              onChange={[MockFunction]}
              showDaysOutsideCurrentMonth={true}
              value="test"
              views={
                Array [
                  "date",
                ]
              }
            />
          </div>
        </Unknown>
      </ThemeProvider>
      <Box
        p={3}
      >
        <Box
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "gap": 24,
              "marginTop": "24px",
              "maxWidth": 400,
              "padding": "24px",
            }
          }
        >
          <Typography
            className=""
            color="general-mid"
            inline={false}
            variant="h5"
            weight="bold"
          >
            Upload Payment History - 
            Invalid date
          </Typography>
          <div>
            <Typography
              className=""
              color="general-mid"
              inline={false}
              variant="subtitle2"
              weight="normal"
            >
              Bank BNI
            </Typography>
            <FileUpload
              accept={
                Array [
                  ".csv",
                ]
              }
              customValidate={null}
              disabled={true}
              error={false}
              fetcher={null}
              helperText="Upload .csv document, max 5 MB"
              id="bill-and-payment-dashboard-sections-payment-history-upload-bni"
              label=""
              maxFile={1}
              maxSize={5242880}
              placeholder="Example: payment historical.csv"
              ratio={Array []}
              ratioPixel={Array []}
              required={false}
              value={null}
              withCropper={false}
              withDelete={false}
            />
          </div>
          <div>
            <Typography
              className=""
              color="general-mid"
              inline={false}
              variant="subtitle2"
              weight="normal"
            >
              Bank Mandiri
            </Typography>
            <FileUpload
              accept={
                Array [
                  ".csv",
                ]
              }
              customValidate={null}
              disabled={true}
              error={false}
              fetcher={null}
              helperText="Upload .csv document, max 5 MB"
              id="bill-and-payment-dashboard-sections-payment-history-upload-mandiri"
              label=""
              maxFile={1}
              maxSize={5242880}
              placeholder="Example: payment historical.csv"
              ratio={Array []}
              ratioPixel={Array []}
              required={false}
              value={null}
              withCropper={false}
              withDelete={false}
            />
          </div>
        </Box>
      </Box>
    </div>
    <Box
      style={
        Object {
          "flexGrow": 1,
          "overflow": "auto",
        }
      }
    >
      <TableDesktop
        customBody={null}
        customEmptyMessage={null}
        customItem={null}
        customStyles={
          Object {
            "pageInformation": Object {
              "borderBottomLeftRadius": 0,
              "borderBottomRightRadius": 8,
            },
            "root": Object {
              "borderBottomLeftRadius": 0,
              "borderBottomRightRadius": 8,
              "borderTopRightRadius": 8,
              "height": 640,
              "marginTop": -1,
              "martginRight": -1,
              "maxWidth": "100%",
            },
          }
        }
        data={Object {}}
        emptyMessage={
          Object {
            "description": "The data will appear when the customer payment history has been uploaded",
            "maxWidth": 320,
            "message": "There is no history",
            "size": "small",
          }
        }
        headerAlign="flex-start"
        loading={false}
        loadingRoot={false}
        maxHeight={640}
        meta={
          Object {
            "files": Object {
              "BNI": Object {
                "fileUrl": "test",
              },
              "Mandiri": Object {
                "fileUrl": "test",
              },
            },
          }
        }
        numbering={true}
        onBottomPage={[MockFunction]}
        onClickRow={null}
        onPaginationChange={null}
        page={1}
        pickedRow=""
        pickedRowKey=""
        schema={
          Array [
            Object {
              "label": "COMPANY NAME",
              "name": "companyName",
            },
            Object {
              "label": "BP NUMBER",
              "name": "bpNumber",
            },
            Object {
              "label": "PAYMENT",
              "name": "type",
            },
            Object {
              "label": "STATUS",
              "name": "status",
              "schemaStatus": Object {
                "failed": "danger",
                "sent": "success",
              },
            },
          ]
        }
        selectWithRawData={false}
        selectedRowKey="key"
        selectedRowSticky={false}
        size={10}
        useCollapseChild={null}
        useOrderBy={
          Array [
            null,
            [Function],
          ]
        }
        useOrderDirection={
          Array [
            null,
            [Function],
          ]
        }
        useSelectedRow={Array []}
      />
    </Box>
  </div>
  <PopUpListSubmittedCustomer
    onClose={[MockFunction]}
  />
</Box>
`;
